--- a/.github/workflows/reusable-go-fmt-and-vet.yml
+++ b/.github/workflows/reusable-go-fmt-and-vet.yml
@@ -15,6 +15,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       
+      - name: Setup go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17.5
+
       - name: go mod download
         working-directory: ${{inputs.directory}}
         run: go mod download
