--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -24,7 +24,15 @@ jobs:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@crt-build-and-tests
     with:
       directory: hack/helm-reference-gen
-    needs: go-fmt-vet-helm-gen
+    needs: [go-fmt-vet-helm-gen, validate-helm-gen]
+
+  unit-test-helm-template:
+    runs-on: ubuntu-latest
+    steps:
+      - name: TODO
+        run:
+         echo "Filler"
+    needs: [unit-helm-gen]
 
   lint-control-plane:
     runs-on: ubuntu-latest
@@ -83,10 +91,10 @@ jobs:
     with:
       directory: acceptance
 
-  unit-acceptance:
+  unit-acceptance-framework:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@crt-build-and-tests
     with:
-      directory: acceptance
+      directory: acceptance/framework
     needs: go-fmt-vet-acceptance
 
   go-fmt-vet-cli:
@@ -99,13 +107,6 @@ jobs:
     with:
       directory: cli 
     needs: go-fmt-vet-cli
-
-  unit-test-helm-template:
-    runs-on: ubuntu-latest
-    steps:
-      - name: TODO
-        run:
-         echo "Filler"
 
   dev-upload-docker:
     runs-on: ubuntu-latest
@@ -121,7 +122,7 @@ jobs:
       - name: TODO
         run:
          echo "Filler"
-    needs: [unit-cli, dev-upload-docker, unit-acceptance, unit-test-helm-template]
+    needs: [unit-cli, dev-upload-docker, unit-acceptance-framework, unit-test-helm-template]
 
   acceptance:
     runs-on: ubuntu-latest
@@ -129,7 +130,7 @@ jobs:
       - name: TODO
         run:
          echo "Filler"
-    needs: [unit-cli, dev-upload-docker, unit-acceptance, unit-test-helm-template]
+    needs: [unit-cli, dev-upload-docker, unit-acceptance-framework, unit-test-helm-template]
 
 
 
