--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,6 +7,19 @@ on:
       - crt-build-and-tests 
   pull_request:
 
+env:
+  CONTROL_PLANE_PATH: control-plane
+  CLI_PATH: cli
+  ACCEPTANCE_MOD_PATH: acceptance
+  ACCEPTANCE_TEST_PATH: acceptance/tests
+  ACCEPTANCE_FRAMEWORK_PATH: acceptance/framework
+  CHARTS_CONSUL_PATH: charts/consul
+  HELM_GEN_PATH: hack/helm-reference-gen
+  TEST_RESULTS: /tmp/test-results # path to where test results are saved
+  CONSUL_VERSION: 1.11.2 # Consul's OSS version to use in tests
+  CONSUL_ENT_VERSION: 1.11.2+ent # Consul's enterprise version to use in tests
+  GO_VERSION: 1.17.2 # Controls what golang version to use. Passed in as a variable to reusable workflows
+
 jobs:
   validate-helm-gen:
     runs-on: ubuntu-latest
@@ -18,12 +31,14 @@ jobs:
   go-fmt-vet-helm-gen:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-go-fmt-vet.yml@crt-build-and-tests
     with:
-      directory: hack/helm-reference-gen
+      directory: $HELM_GEN_PATH
+      go-version: $GO_VERSION
 
   unit-helm-gen:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@crt-build-and-tests
     with:
-      directory: hack/helm-reference-gen
+      directory: $HELM_GEN_PATH 
+      go-version: $GO_VERSION
     needs: [go-fmt-vet-helm-gen, validate-helm-gen]
 
   unit-test-helm-template:
@@ -44,7 +59,8 @@ jobs:
   go-fmt-vet-control-plane:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-go-fmt-vet.yml@crt-build-and-tests
     with:
-      directory: control-plane 
+      directory: $CONTROL_PLANE_PATH
+      go-version: $GO_VERSION
 
   test-control-plane:
     runs-on: ubuntu-latest
@@ -89,23 +105,27 @@ jobs:
   go-fmt-vet-acceptance:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-go-fmt-vet.yml@crt-build-and-tests
     with:
-      directory: acceptance
+      directory: $ACCEPTANCE_MOD_PATH
+      go-version: $GO_VERSION
 
   unit-acceptance-framework:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@crt-build-and-tests
     with:
-      directory: acceptance/framework
+      directory: $ACCEPTANCE_FRAMEWORK_PATH
+      go-version: $GO_VERSION
     needs: go-fmt-vet-acceptance
 
   go-fmt-vet-cli:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-go-fmt-vet.yml@crt-build-and-tests
     with:
-      directory: cli 
+      directory: $CLI_PATH
+      go-version: $GO_VERSION
 
   unit-cli:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@crt-build-and-tests
     with:
-      directory: cli 
+      directory: $CLI_PATH
+      go-version: $GO_VERSION
     needs: go-fmt-vet-cli
 
   dev-upload-docker:
