--- a/.github/workflows/reusable-unit.yml
+++ b/.github/workflows/reusable-unit.yml
@@ -6,7 +6,14 @@ on:
       directory:
         required: true
         type: string
-      
+      go-version:
+        required: true
+        type: string
+
+
+env:
+  TEST_RESULTS: /tmp/test-results # path to where test results are saved
+  GOTESTSUM_VERSION: 1.6.4
 
 jobs:
   execute:
@@ -19,7 +26,7 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17.5
+          go-version: ${{inpusts.go-version}}
 
       - name: Setup go mod cache
         uses: actions/cache@v2
@@ -33,11 +40,11 @@ jobs:
 
       - name: Install gotestsum
         run: |
-          wget https://github.com/gotestyourself/gotestsum/releases/download/v1.6.4/gotestsum_1.6.4_linux_amd64.tar.gz
-          sudo tar -C /usr/local/bin -xzf gotestsum_1.6.4_linux_amd64.tar.gz
-          rm gotestsum_1.6.4_linux_amd64.tar.gz
+          wget https://github.com/gotestyourself/gotestsum/releases/download/v$GOTESTSUM_VERSION/gotestsum_$GOTESTSUM_VERSION_linux_amd64.tar.gz
+          sudo tar -C /usr/local/bin -xzf gotestsum_$GOTESTSUM_VERSION_linux_amd64.tar.gz
+          rm gotestsum_$GOTESTSUM_VERSION_linux_amd64.tar.gz
 
-      - run: mkdir -p /tmp/test-results
+      - run: mkdir -p $TEST_RESULTS 
 
       - name: go mod download
         working-directory: ${{inputs.directory}}
@@ -46,5 +53,5 @@ jobs:
       - name: Run tests 
         working-directory: ${{inputs.directory}}
         run: |
-          gotestsum --junitfile /tmp/test-results/gotestsum-report.xml ./... -- -p 4
+          gotestsum --junitfile $TEST_RESULTS/gotestsum-report.xml ./... -- -p 4
          
