--- a/.github/workflows/reusable-unit.yml
+++ b/.github/workflows/reusable-unit.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{inpusts.go-version}}
+          go-version: ${{inputs.go-version}}
 
       - name: Setup go mod cache
         uses: actions/cache@v2
