--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,19 +7,6 @@ on:
       - crt-build-and-tests 
   pull_request:
 
-env:
-  CONTROL_PLANE_PATH: control-plane
-  CLI_PATH: cli
-  ACCEPTANCE_MOD_PATH: acceptance
-  ACCEPTANCE_TEST_PATH: acceptance/tests
-  ACCEPTANCE_FRAMEWORK_PATH: acceptance/framework
-  CHARTS_CONSUL_PATH: charts/consul
-  HELM_GEN_PATH: hack/helm-reference-gen
-  TEST_RESULTS: /tmp/test-results # path to where test results are saved
-  CONSUL_VERSION: 1.11.2 # Consul's OSS version to use in tests
-  CONSUL_ENT_VERSION: 1.11.2+ent # Consul's enterprise version to use in tests
-  GO_VERSION: 1.17.2 # Controls what golang version to use. Passed in as a variable to reusable workflows
-
 jobs:
   validate-helm-gen:
     runs-on: ubuntu-latest
@@ -31,14 +18,14 @@ jobs:
   go-fmt-vet-helm-gen:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-go-fmt-vet.yml@crt-build-and-tests
     with:
-      directory: ${{env.HELM_GEN_PATH}}
-      go-version: ${{env.GO_VERSION}}
+      directory: hack/helm-reference-gen
+      go-version: 1.17.2
 
   unit-helm-gen:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@crt-build-and-tests
     with:
-      directory: ${{env.HELM_GEN_PATH}}
-      go-version: ${{env.GO_VERSION}}
+      directory: hack/helm-reference-gen
+      go-version: 1.17.2
     needs: [go-fmt-vet-helm-gen, validate-helm-gen]
 
   unit-test-helm-template:
@@ -59,8 +46,8 @@ jobs:
   go-fmt-vet-control-plane:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-go-fmt-vet.yml@crt-build-and-tests
     with:
-      directory: ${{env.CONTROL_PLANE_PATH}}
-      go-version: ${{env.GO_VERSION}}
+      directory: control-plane
+      go-version: 1.17.2
 
   test-control-plane:
     runs-on: ubuntu-latest
@@ -105,27 +92,27 @@ jobs:
   go-fmt-vet-acceptance:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-go-fmt-vet.yml@crt-build-and-tests
     with:
-      directory: ${{env.ACCEPTANCE_MOD_PATH}}
-      go-version: ${{env.GO_VERSION}}
+      directory:  acceptance 
+      go-version: 1.17.2
 
   unit-acceptance-framework:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@crt-build-and-tests
     with:
-      directory: ${{env.ACCEPTANCE_FRAMEWORK_PATH}}
-      go-version: ${{env.GO_VERSION}}
+      directory: accepance/framework
+      go-version: 1.17.2
     needs: go-fmt-vet-acceptance
 
   go-fmt-vet-cli:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-go-fmt-vet.yml@crt-build-and-tests
     with:
-      directory: ${{env.CLI_PATH}}
-      go-version: ${{env.GO_VERSION}}
+      directory: cli 
+      go-version: 1.17.2
 
   unit-cli:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@crt-build-and-tests
     with:
-      directory: ${{env.CLI_PATH}}
-      go-version: ${{env.GO_VERSION}}
+      directory: cli 
+      go-version: 1.17.2
     needs: go-fmt-vet-cli
 
   dev-upload-docker:
