--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -98,7 +98,7 @@ jobs:
   unit-acceptance-framework:
     uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@crt-build-and-tests
     with:
-      directory: accepance/framework
+      directory: acceptance/framework
       go-version: 1.17.2
     needs: go-fmt-vet-acceptance
 
