--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -53,12 +53,16 @@ jobs:
       go-version: 1.17.2
     needs: [go-fmt-vet-helm-gen, validate-helm-gen]
 
-  unit-test-helm-template:
+  unit-test-helm-templates:
     runs-on: ubuntu-latest
+    container: docker.mirror.hashicorp.services/hashicorpdev/consul-helm-test:0.10.0
     steps:
-      - name: TODO
-        run:
-         echo "Filler"
+      - name: Checkout code
+        uses: actions/checkout@v2
+   
+      - name: Run Unit Tests
+        working-directory: charts/consul
+        run:  bats --jobs 4 ./test/unit
     needs: [unit-helm-gen]
 
   lint-control-plane:
@@ -218,7 +222,7 @@ jobs:
       - name: TODO
         run:
          echo "Filler"
-    needs: [unit-cli, dev-upload-docker, unit-acceptance-framework, unit-test-helm-template]
+    needs: [unit-cli, dev-upload-docker, unit-acceptance-framework, unit-test-helm-templates]
 
   acceptance:
     runs-on: ubuntu-latest
@@ -226,7 +230,7 @@ jobs:
       - name: TODO
         run:
          echo "Filler"
-    needs: [unit-cli, dev-upload-docker, unit-acceptance-framework, unit-test-helm-template]
+    needs: [unit-cli, dev-upload-docker, unit-acceptance-framework, unit-test-helm-templates]
 
 
 
