--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{inputs.go-version}}
+          go-version: 1.17.2
 
       - name: Setup go mod cache
         uses: actions/cache@v2
@@ -89,7 +89,7 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{inputs.go-version}}
+          go-version: 1.17.2
 
       - name: Setup go mod cache
         uses: actions/cache@v2
@@ -130,7 +130,7 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{inputs.go-version}}
+          go-version: 1.17.2
 
       - name: Setup go mod cache
         uses: actions/cache@v2
