--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -117,6 +117,7 @@ jobs:
               unzip consul_${{env.CONSUL_VERSION}}_linux_amd64.zip -d $HOME/bin && \
               rm consul_${{env.CONSUL_VERSION}}_linux_amd64.zip
             chmod +x $HOME/bin/consul
+            echo "$HOME/bin" >> $GITHUB_PATH
             PACKAGE_NAMES=$(go list ./...)
             gotestsum --junitfile ${{env.TEST_RESULTS}}/gotestsum-report.xml -- -p 4 $PACKAGE_NAMES
     needs: [lint-control-plane, go-fmt-vet-control-plane]
@@ -158,6 +159,7 @@ jobs:
               unzip consul_${{env.CONSUL_ENT_VERSION}}_linux_amd64.zip -d $HOME/bin && \
               rm consul_${{env.CONSUL_ENT_VERSION}}_linux_amd64.zip
             chmod +x $HOME/bin/consul
+            echo "$HOME/bin" >> $GITHUB_PATH
             PACKAGE_NAMES=$(go list ./...)
             gotestsum --junitfile ${{env.TEST_RESULTS}}/gotestsum-report.xml -- -tags=enterprise -p 4 $PACKAGE_NAMES
     needs: [lint-control-plane, go-fmt-vet-control-plane]
