--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -243,7 +243,7 @@ jobs:
 
       - uses: actions/download-artifact@v3
         with:
-          name: my-artifact
+          name: consul-k8s_linux_amd64.zip
           path: control-plane/consul-k8s_linux_amd64.zip
 
       - name: Docker build 
