--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -284,7 +284,7 @@ jobs:
 
       - run:  mkdir -p ${{env.TEST_RESULTS}}
 
-      - name: Run acceptance tests
+        #      - name: Run acceptance tests
         
 
   acceptance:
